Convert Locale use to static calls per recent Java recommendations